--- a/src/Cocoa/Window/Window/Base.lproj/MainMenu.xib
+++ b/src/Cocoa/Window/Window/Base.lproj/MainMenu.xib
@@ -12,7 +12,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
@@ -712,10 +712,25 @@
                             <action selector="closeWindowBtnClick:" target="b3o-UK-FMS" id="nL3-Ie-6nB"/>
                         </connections>
                     </button>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6OD-Ef-DGc">
+                        <rect key="frame" x="90" y="148" width="124" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="testController" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="h1E-Cv-25i">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="testControllerBtnClick:" target="b3o-UK-FMS" id="VMJ-2O-RhZ"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <point key="canvasLocation" x="139" y="-120"/>
         </window>
-        <customObject id="b3o-UK-FMS" customClass="WindowDelegate"/>
+        <customObject id="b3o-UK-FMS" customClass="WindowDelegate">
+            <connections>
+                <outlet property="xibWindow_" destination="QvC-M9-y7g" id="dGJ-Vt-Gx3"/>
+            </connections>
+        </customObject>
     </objects>
 </document>
